--- a/index.Rmd
+++ b/index.Rmd
@@ -5,8 +5,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-source("deaths_vs_vaccinations.r")
-source("Average Deaths with location.R")
+source("analysis.R")
 ```
 
 ## Introduction
@@ -20,19 +19,19 @@ plot(plot_avg_deaths)
 
 ## Plot 2 of Distribution Variables
 
-```{r deaths_vs_vaccinations_plot, echo=FALSE, fig.height=8, fig.width=8, paged.print=FALSE}
-plot(deaths_vs_vaccinations_plot)
+```{r}
+plot(avg_vaccinations_month_plot)
 ```
 
 
 ## Plot 1 of Relationships between Variables
 
-```{r}
-
+```{r deaths_vs_vaccinations_plot, echo=FALSE, fig.height=8, fig.width=8, paged.print=FALSE}
+plot(deaths_vs_vaccinations_plot)
 ```
 
 ## Plot 2 of Relationships between Variables
 
 ```{r}
-
+plot(deaths_vs_months)
 ```
